# lightroom-advanced-curves

./: .gitignore  CMakeLists.txt  DEVELOPMENT_SUMMARY.md  LIGHTROOM_PLUGIN_CORRECTED_STRATEGY.md  LIGHTROOM_PLUGIN_UBUNTU_ROADMAP.md  PROJECT_OVERVIEW.md  README.md  README_FINAL.md  ROADMAP_DETAILED.md  build.sh
cpp-core/: CMakeLists.txt
cpp-core/include/: AdvancedCurveProcessor.h
cpp-core/src/: CurveEngine.cpp
cpp-core/src/ai/: DirectMLProcessor.cpp  DirectMLProcessor.h  ProfessionalAIModels.cpp  ProfessionalAIModels.h
docs/business/: MARKET_ANALYSIS.md
docs/technical/: MODEL_CONTEXT_PROTOCOL.md  PROJECT_CHECKLIST.md  TECH_STACK_DETAILED.md
lightroom-plugin/: INSTALL.md  LIGHTROOM_PLUGIN_STRATEGY.md  PLUGIN_FEATURES_DETAILED.md  README.md  setup.sh  test_plugin.lua
lightroom-plugin/src/: AdvancedCurveDialog.lua  BatchCurveProcessor.lua  CurveEngine.lua  CurvePresets.lua  Info.lua  MetadataDefinition.lua  PluginInit.lua
lua-interface/: AIEnhancementDialog.lua  AdvancedCurveDialog.lua  CurveDLLInterface.lua  Info.lua  ProfessionalAIInterface.lua
src/: main.cpp
